fix: overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ html {
     overflow-y: scroll; /* Always show vertical scrollbar */
 }
 
+.main-container {
+    max-width: 100vw;
+}
+
 .converter {
     color: hsl(228, 71%, 99%)
 }
@@ -117,7 +121,7 @@ html {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     overflow: hidden;
-    max-height: 3em;
+    max-height: 2.75em;
 }
 
 .three-line-ellipsis {
